updated test case
